[package]
name = "daily-planner"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
crossterm = "0.19.0"
itertools = "0.10.0"
thiserror = "1.0.23"
