[package]
name = "daily-planner"
version = "0.1.0"
authors = ["Henri Lunnikivi <henri.lunnikivi@tuni.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = "0.3.56"
chrono = "0.4.19"
clap = "2.33.3"
crossterm = "0.19.0"
itertools = "0.10.0"
serde = "1.0.123"
serde_json = "1.0.62"
strfmt = "0.1.6"
thiserror = "1.0.23"
ureq = "2.0.1"
